--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -1,5 +1,5 @@
 name: Русский
 help: |
-  <b>Бот</b> является примером бота на Телеграфе.
+  <b>Бот</b> является примером бота на Telegram.
 language: Пожалуйста, выберите язык.
 language_selected: <b>Бот</b> теперь говорит по-русски.
