--- a/locales/tr.yaml
+++ b/locales/tr.yaml
@@ -1,5 +1,5 @@
 name: Turkish
 help: |
-  <b>Bot</b> nasıl Telegraf botları yapacağınızı görmenizi sağlıyor.
+  <b>Bot</b> nasıl Telegram botları yapacağınızı görmenizi sağlıyor.
 language: Lütfen, dili seçin.
 language_selected: <b>Bot</b> Türkçe konuşuyor.
